# chm-to-markdown-converter

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
scripts/: build_vector_index.py  convert.py
src/chm_converter/: __init__.py  chunker.py  cleaner.py  converter.py  embedder.py  extractor.py  toc_parser.py
tests/: test_chunking.py  test_embedder.py
